force-app/main/default/objects/Survey__c/fields/Competitor_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Vendor__c</fullName>
    <description>Sourcing Work Order Survey</description>
    <label>Competitor Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>