force-app/main/default/objects/Survey__c/fields/Did_we_win_the_business__c.field-meta.xml
<CustomField>
    <fullName>Did_we_win_the_business__c</fullName>
    <description>Work Order Sourcing Survey</description>
    <label>Did we win the business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Customer still deciding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>