force-app/main/default/objects/Survey__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Work Order Sourcing Survey</description>
    <label>Vendor</label>
    <type>TextArea</type>
</CustomField>