force-app/main/default/objects/Survey__c/fields/What_was_the_primary_win_loss_reason__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_primary_win_loss_reason__c</fullName>
    <label>What was the primary win/loss reason?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Did_we_win_the_business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Lead time</fullName>
            </value>
            <value>
                <fullName>Quoted quickly</fullName>
            </value>
            <value>
                <fullName>Veritiv&apos;s existing relationship with the customer</fullName>
            </value>
            <value>
                <fullName>Customer having issue with current Vendor</fullName>
            </value>
            <value>
                <fullName>Quote was late</fullName>
            </value>
            <value>
                <fullName>Customer decided on another Vendor</fullName>
            </value>
            <value>
                <fullName>Veritiv did not have the exact product requested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>