force-app/main/default/objects/Survey__c/recordTypes/Work_Orders_Sourcing_Survey.recordType-meta.xml
<RecordType>
    <fullName>Work_Orders_Sourcing_Survey</fullName>
    <active>true</active>
    <description>Used for saving data response to outbound Sourcing Work Order Survey</description>
    <label>Work Orders - Sourcing Survey</label>
</RecordType>