force-app/main/default/objects/Survey__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>*Created Today</label>
    <sharedTo>
        <group>All_Admins</group>
    </sharedTo>
</ListView>