force-app/main/default/objects/Survey__c/listViews/Created_TODAY_ar.listView-meta.xml
<ListView>
    <fullName>Created_TODAY_ar</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Did_we_win_the_business__c</columns>
    <columns>What_was_the_primary_win_loss_reason__c</columns>
    <columns>Vendor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created TODAY</label>
    <sharedTo>
        <group>All_Admins</group>
    </sharedTo>
</ListView>