force-app/main/default/objects/Survey__c/listViews/CS_Survey_2009.listView-meta.xml
<ListView>
    <fullName>CS_Survey_2009</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>CS Survey 2009</label>
</ListView>