force-app/main/default/objects/Survey__c/listViews/Nov_Training_Surveys.listView-meta.xml
<ListView>
    <fullName>Nov_Training_Surveys</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/31/2008 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>12/1/2008 12:00 AM</value>
    </filters>
    <label>Nov Training Surveys</label>
</ListView>